--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,6 @@
+server:
+  port: 8081
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/medical_records_dev?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
@@ -20,5 +23,11 @@ keycloak:
   resource: medical-backend
   public-client: true
 
-server:
-  port: 8081
+  # Admin credentials for the Keycloak Admin REST API
+  admin:
+    username: medicalrealadmin
+    password: STRONGPASSWORD!@#
+  # If your client is CONFIDENTIAL, you might need this:
+  credentials:
+    secret: YOUR_CLIENT_SECRET     # Only needed for confidential clients
+
