Updated the entity relationship model to include appointments with diagnosis, sick leave and related to diagnosis - treatment and to treatment - prescription that contains the relation to medicine for prescription. Updated the database and added a new endpoint for Appointment related data fetching for the currently logged-in user.

--- a/src/main/resources/db.changelog/db.changelog-master.yaml
+++ b/src/main/resources/db.changelog/db.changelog-master.yaml
@@ -1,14 +1,21 @@
-# File: db.changelog-master.yaml
 databaseChangeLog:
+#  - include:
+#      file: db.changelog/db.changelog-entities.yaml
+#  - include:
+#      file: db.changelog/db.changelog-2023-11-01.yaml
+#  - include:
+#      file: db.changelog/db.changelog-add-role-to-users.yaml
+#  - include:
+#      file: db.changelog/db.changelog-remove-keycloak-user-id-from-doctors.yaml
+#  - include:
+#      file: db.changelog/db.changelog-remove-egn-from-patients.yaml
+#  - include:
+#      file: db.changelog/db.changelog-rename-unique-identifier-to-keycloak-user-id.yaml
+#
+#  # >>> Added this line:
+#  - include:
+#      file: db.changelog/db.changelog-2025-01-08.yaml
+
   - include:
-      file: db.changelog/db.changelog-entities.yaml
-  - include:
-      file: db.changelog/db.changelog-2023-11-01.yaml
-  - include:
-      file: db.changelog/db.changelog-add-role-to-users.yaml
-  - include:
-      file: db.changelog/db.changelog-remove-keycloak-user-id-from-doctors.yaml
-  - include:
-      file: db.changelog/db.changelog-remove-egn-from-patients.yaml
-  - include:
-      file: db.changelog/db.changelog-rename-unique-identifier-to-keycloak-user-id.yaml
+      file: db.changelog/int.yaml
+      relativeToChangelogFile: false
