Added create appointment functionality as well as updated fixed a bug related to .toString() method for MtO and OtM relations between entities. Added a retrieve doctor's details for currently logged-in user.

--- a/src/main/resources/db.changelog/int.yaml
+++ b/src/main/resources/db.changelog/int.yaml
@@ -114,6 +114,9 @@ databaseChangeLog:
               - column:
                   name: updated_at
                   type: DATETIME
+              - column:
+                  name: appointment_date_time
+                  type: DATETIME
 
         - addForeignKeyConstraint:
             baseTableName: appointments
