--- a/src/main/resources/db.changelog/int.yaml
+++ b/src/main/resources/db.changelog/int.yaml
@@ -243,6 +243,9 @@ databaseChangeLog:
               - column:
                   name: updated_at
                   type: DATETIME
+              - column:
+                  name: description
+                  type: VARCHAR(255)
 
         - addForeignKeyConstraint:
             baseTableName: treatments
